k8s_manifest/web-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      labels:
        app: web-api
    spec:
      terminationGracePeriodSeconds: 3
      containers:
        - name: web-api-cont
          image: localhost:32000/web-api:latest
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
