k8s_manifest/web-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api-svc
spec:
  selector:
    app: web-api
  ports:
    - port: 80
      targetPort: 80
