k8s_manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api-test.myapp.com
      http: 
        paths:  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-api-test-svc 
                port: 
                  number: 80
